fix missing button after saving if site is too small, minor

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
@@ -46,6 +46,7 @@ span.CategoryType {
 
 .CategoryRelations {
     text-align: center;
+    margin-bottom: 50px;
 }
 
 .RelationArrow {
